// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeEditor component should render correctly 1`] = `
<FormGroup
  hasMargin={true}
  invalid={false}
  legendText="foo"
  message={false}
  messageText=""
>
  <Controlled
    className="miq-codemirror "
    editorDidMount={[Function]}
    onBeforeChange={[Function]}
    onChange={[MockFunction]}
    options={
      Object {
        "autoCloseBrackets": true,
        "gutters": Array [
          "CodeMirror-lint-markers",
        ],
        "lineNumbers": true,
        "lineWrapping": true,
        "lint": true,
        "mode": "yaml",
        "styleActiveLine": true,
        "theme": "eclipse",
      }
    }
    style={
      Object {
        "height": "auto",
      }
    }
  />
  <HelperTextBlock />
</FormGroup>
`;

exports[`CodeEditor component should render mode switches 1`] = `
<FormGroup
  hasMargin={true}
  invalid={false}
  legendText="foo"
  message={false}
  messageText=""
>
  <RadioButtonGroup
    hideLegend={false}
    labelPosition="right"
    name="--undefined--mode"
    onChange={[Function]}
    orientation="horizontal"
    valueSelected="yaml"
  >
    <ForwardRef(RadioButton)
      key="yaml"
      labelText="yaml"
      value="yaml"
    />
    <ForwardRef(RadioButton)
      key="json"
      labelText="json"
      value="json"
    />
  </RadioButtonGroup>
  <Controlled
    className="miq-codemirror "
    editorDidMount={[Function]}
    onBeforeChange={[Function]}
    onChange={[MockFunction]}
    options={
      Object {
        "autoCloseBrackets": true,
        "gutters": Array [
          "CodeMirror-lint-markers",
        ],
        "lineNumbers": true,
        "lineWrapping": true,
        "lint": true,
        "mode": "yaml",
        "styleActiveLine": true,
        "theme": "eclipse",
      }
    }
    style={
      Object {
        "height": "auto",
      }
    }
  />
  <HelperTextBlock />
</FormGroup>
`;
